# isitfootballyet

./: Dockerfile  fly.toml  football.js  football.json  football.py  pyproject.toml
.github/workflows/: deploy.yml
assets/: style.css
